--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/vue-info-card.js",
   "scripts": {
     "build": "rimraf ./dist && webpack --config ./webpack.config.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
+    "unit": "node node_modules/cross-env/dist/bin/cross-env.js BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
   },
   "files": [
     "dist/"
@@ -47,13 +47,14 @@
     "karma": "^1.7.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
     "karma-sinon-chai": "^1.3.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.4",
     "mocha": "^3.5.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.1",
     "sinon": "^2.4.1",
     "sinon-chai": "^2.13.0",
