Added coveralls integration to the travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ cache:
     - node_modules
 install:
   - npm i --cache-min 600000
+before_script:
+  - export COVERALLS_REPO_TOKEN=$COVERALLS_TOKEN
 script:
   - npm run unit
+after_success: 'npm run coveralls'
