--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/vue-info-card.js",
   "scripts": {
     "build": "rimraf ./dist && webpack --config ./webpack.config.js",
-    "unit": "node node_modules/cross-env/dist/bin/cross-env.js BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
+    "unit": "node node_modules/cross-env/dist/bin/cross-env.js BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "coveralls": "cat ./test/unit/coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "files": [
     "dist/"
@@ -34,6 +35,7 @@
     "babel-preset-stage-2": "^6.11.0",
     "babel-runtime": "^6.9.2",
     "chai": "^4.1.2",
+    "coveralls": "^2.13.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.5",
     "eslint": "^4.5.0",
