--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,8 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "publish": "git subtree push --prefix dist/ origin gh-pages"
   },
   "dependencies": {
     "vue": "^2.4.2",
