--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-info-card",
-  "version": "0.1.2-0",
+  "version": "0.1.2",
   "description": "Simple and beautiful card component with an elegant spark line, for VueJS.",
   "main": "dist/vue-info-card.js",
   "scripts": {
